ARA Minor UI Fixes ARA 04162015 -removed underline in my business process queue button -fixed edit profile not showing from process queue page -Added terminal name in process queue page -added margin to next and serve buttons for mobile view

--- a/public/css/process-queue/processq.css
+++ b/public/css/process-queue/processq.css
@@ -74,6 +74,7 @@
 .processq-box .btn-default {
     padding-left: 20px;
     padding-right: 20px;
+    margin-bottom: 5px; /*ARA Process Queue - Buttons (MOBILE)*/
 }
 .processq-box .btn-default:hover {
     background-color: #1081a8;
